use Java 8 time api and added a lot more tests